--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,8 +1,9 @@
 .login {
-    margin: 80px auto;
-    height:340px;
-    width: 350px;
+  margin-top: 500px;
+  height: 340px;
+  width: 350px;
 }
+
 div p {
   font-size: x-small;
 }
@@ -11,11 +12,10 @@ div p {
   color: pink;
 }
 
-
-.register_descrip{
+.register_descrip {
   text-align: center;
- }
+}
 
-.signin-btn{
- margin:0 100px
+.signin-btn {
+  margin: 0 100px;
 }
