--- a/src/components/Logout.css
+++ b/src/components/Logout.css
@@ -1,8 +1,9 @@
 .logout {
-    margin: 200px auto;
-    height:200px;
-    width: 350px;
+ 
+  height:400px;
+  width: 350px;
 }
+
 div p {
   font-size: x-small;
 }
@@ -11,12 +12,20 @@ div p {
   color: pink;
 }
 
-
-.return-home{
+.return-home {
   text-align: center;
-  font-size: 20px;
- }
+  font-size: 10px;
+}
 
-.logout-btn{
-    margin-left: 40px;
+.logout-btn {
+  margin-left: 55px;
+}
+
+/* Avatar image */
+img.avatar {
+  width: 60%;
+  border-radius: 50%;
+  margin-bottom: 60px;
+  margin-left: 65px;
+  margin-top: 20px;
 }
